--- a/songs/pt/pra_te_adorar.tex
+++ b/songs/pt/pra_te_adorar.tex
@@ -20,8 +20,8 @@
 
 \beginverse
                        
-Em es\[A]pírito e em \[A7+]verdade, Te a\[D]dora\[E]mos, Te a\[A]doramos. (repete)
-Reis dos \[F#m]reis e \[F#m7+]Senhor, Te en\[Bm7]tregamos \[Bm7/A]nosso \[E4]viver.\[E] (repete)
+Em es\[A]pírito e em ver\[A7+]dade, Te ado\[D]ramos,\[E] Te ado\[A]ramos. (repete)
+Reis dos \[F#m]reis e \[F#m7+]Senhor, Te entre\[Bm7]gamos \[Bm7/A]nosso vi\[Esus4]ver.\[E] (repete)
 
 \endverse
 
@@ -29,11 +29,11 @@ Reis dos \[F#m]reis e \[F#m7+]Senhor, Te en\[Bm7]tregamos \[Bm7/A]nosso \[E4]viv
 % section #2: chorus 
 
 \beginchorus
-                      P'ra Te ado\[D]rar \[F#m]ó Rei dos \[E]reis, é que eu \[D]nasci \[F#m]ó Rei \[E]Jesus
-Meu \[C#7]prazer é Te \[F#m]louvar, meu \[E]prazer é \[D]estar, \[E]nos átrios do \[A]Senhor.
-Meu \[E/G#]prazer é \[F#m]viver, na \[C#m7]casa de \[D]Deus
-(1ª vez) onde \[E]tudo \[A]é bom!\[E] (repete côro)
-(no fim) onde reina\[E] o lou\[A]vor
+P'ra Te ado\[D]rar ó \[F#m]Rei dos \[E]reis, é que eu nas\[D]ci ó \[F#m]Rei Je\[E]sus
+Meu pra\[C#7]zer é Te \[F#m]louvar, meu \[E]prazer é \[D]estar, \[E]nos átrios do \[A]Senhor.
+Meu pra\[E/G#]zer é vi\[F#m]ver, na \[C#m7]casa de \[D]Deus
+(1ª vez) onde \[E]tudo é \[A]bom!\[E]       (repete côro)
+(no fim) onde \[E]reina o lou\[A]vor
 
 \endchorus
 
